--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <!-- Confetti Container -->
     <div id="confetti-container"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/tone@14.7.77/build/Tone.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
