Add sound toggle control

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </div>
 
     <button id="scores-btn" onclick="showScores()">🏆</button>
+    <button id="sound-toggle">🔊</button>
 
     <!-- Confetti Container -->
     <div id="confetti-container"></div>
