Add level tracking in high scores

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div id="scores-overlay" class="overlay">
       <div class="panel">
         <h1>High Scores</h1>
+        <p class="scores-note">Each entry shows the level reached.</p>
         <ol id="scores-list"></ol>
         <button onclick="closeScores()">Close</button>
       </div>
