--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="score">Score: 0</div>
       <div id="remaining">Next in: 10</div>
     </div>
+    <div id="progress"><div class="bar"></div></div>
     <div id="game"></div>
 
     <!-- Tutorial Overlay -->
