Add custom modal for shuffle choice

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
       </div>
     </div>
 
+    <!-- Shuffle Overlay -->
+    <div id="shuffle-overlay" class="overlay">
+      <div class="panel">
+        <h1>No Moves</h1>
+        <p id="shuffle-text">Use a shuffle to continue?</p>
+        <div class="actions">
+          <button id="shuffle-use">Use Shuffle</button>
+          <button id="shuffle-end">End Game</button>
+        </div>
+      </div>
+    </div>
+
     <!-- High Scores Overlay -->
     <div id="scores-overlay" class="overlay">
       <div class="panel">
