--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vibey Crush</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <style></style>
   </head>
   <body>
     <div id="info">
