Improve help screen with shuffle and board info

--- a/index.html
+++ b/index.html
@@ -76,15 +76,18 @@
 
     <!-- Help Overlay -->
     <div id="help-overlay" class="overlay">
-      <div class="panel">
+      <div class="panel help-panel">
         <h1>How to Play</h1>
-        <p>Swap adjacent tiles to match 3 or more identical emojis.</p>
-        <p><span class="example">🔴🔴🔴</span> — matching 3 clears those tiles.</p>
-        <p><span class="example">🟢🟢🟢🟢</span> — matching 4 clears a row or column.</p>
-        <p><span class="example">🟣🟣🟣🟣🟣</span> — matching 5 clears the entire board.</p>
+        <ul class="help-list">
+          <li>Swap adjacent tiles to match 3 or more identical emojis.</li>
+          <li><span class="example">🔴🔴🔴</span> Matching 3 clears those tiles.</li>
+          <li><span class="example">🟢🟢🟢🟢</span> Matching 4 clears a row or column.</li>
+          <li><span class="example">🟣🟣🟣🟣🟣</span> Matching 5 clears the entire board.</li>
+          <li>Earn a <strong>Shuffle</strong> every 100 points.</li>
+          <li>The board grows larger every 5 levels.</li>
+        </ul>
         <p>
-          This game was Vibe-Coded using ChatGPT o4-mini-high and OpenAI Codex
-          by
+          This game was Vibe-Coded using ChatGPT o4-mini-high and OpenAI Codex by
           <a href="https://www.linkedin.com/in/mdisna/" target="_blank" rel="noopener"
             >Matthieu Disna</a
           >.
