Add Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vibey Crush</title>
     <link rel="stylesheet" href="css/styles.css" />
-  </head>
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7Q94FWYHD2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag("js", new Date());
+
+      gtag("config", "G-7Q94FWYHD2");
+    </script>
+</head>
   <body>
     <div id="info">
       <div id="level">Level: 1</div>
