Add changelog and version info

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     </div>
     <div id="progress"><div class="bar"></div></div>
     <div id="game"></div>
+    <div id="version-info">
+      Vibey Crush v1.0.0 - Last updated: 2025-06-08 17:57 UTC -
+      <a href="CHANGELOG.md">Change Log</a>
+    </div>
 
     <!-- Tutorial Overlay -->
     <div id="tutorial-overlay" class="overlay visible">
