--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="game"></div>
     <div id="version-info">
       Vibey Crush v1.0.0 - Last updated: 2025-06-08 17:57 UTC -
-      <a href="CHANGELOG.md">Change Log</a>
+      <a href="https://github.com/mDisna/Vibey-Crush/blob/main/CHANGELOG.md" target="_blank" rel="noopener">Change Log</a>
     </div>
 
     <!-- Tutorial Overlay -->
