Limit lock tiles to 7 percent

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="progress"><div class="bar"></div></div>
     <div id="game"></div>
     <div id="version-info">
-      Vibey Crush v1.2.0 - Last updated: 2025-06-08 14:00 UTC -
+      Vibey Crush v1.3.0 - Last updated: 2025-06-08 14:33 ET -
       <a href="https://github.com/mDisna/Vibey-Crush/blob/main/CHANGELOG.md" target="_blank" rel="noopener">Change Log</a>
     </div>
 
